# task_manager_web

backend/: .gitignore  CMakeLists.txt  README.md
backend/db/: init.sql
backend/tests/db/: add_data.sql
